<resources>
    <string name="app_name">MedicationReminder</string>
    <string name="add">Tambah</string>
    <string name="add_medications">Tambah obat ke daftar Anda</string>
    <string name="new_medication">Obat baru</string>
    <string name="medication_name">Nama obat</string>
    <string name="description">Deskripsi</string>
    <string name="taken_as_needed">Diminum sesuai kebutuhan</string>
    <string name="add_another_dose">Tambahkan dosis lain</string>
    <string name="midnight">12:00AM</string>
    <string name="sample_description">Ini adalah contoh deskripsi obat. Ini memiliki banyak kalimat dan mencakup banyak baris.</string>
    <string name="schedule_dose">Jadwalkan Dosis</string>
    <string name="dose_details">Detail Dosis</string>
    <string name="about">Tentang</string>
    <string name="medication_details">Detail Obat</string>
    <string name="edit_medication">Ubah Obat</string>
    <string name="sample_medicine">Sampel Obat</string>
    <string name="closest_dose_sample">Dosis terdekat: 1:00PM hari ini</string>
    <string name="dose_record_delete_warning">Catatan dosis akan dihapus secara permanen.</string>
    <string name="record_delete_hint">(Klik lama catatan di bawah ini untuk menghapusnya)</string>
    <string name="record_detail_hint">(Ketuk catatan untuk melihat detail)</string>
    <string name="time_since_dose_sample">Kira-kira 0 hari, 0 jam, dan 0 menit sejak dosis terakhir diminum</string>
    <string name="time_since_dose_template">Kira-kira %1$d hari, %2$d jam, and %3$d menit sejak dosis terakhir diminum</string>
    <string name="require_photo_proof">Perlu bukti foto</string>
    <string name="previous_doses">Dosis sebelumnya:</string>
    <string name="i_just_took_it">Saya sudah meminumnya!</string>
    <string name="medication_active">Obat aktif</string>
    <string name="medication_type">Jenis obat</string>
    <string name="notifications_enabled">Notifikasi diaktifkan</string>
    <string name="notifications_disabled">Notifikasi dimatikan</string>
    <string name="sample_type_label">Tipe: Tidak terdefinisi</string>
    <string name="prescription_number_hint">Resep #</string>
    <string name="prescription_number_label_format">Resep #: %1$s</string>
    <string name="sample_prescription_number_label">Resep #: Tidak terdefinisi</string>
    <string name="pharmacy">Farmasi</string>
    <string name="pharmacy_label_format">Farmasi: %1$s</string>
    <string name="sample_pharmacy_label">Farmasi: Tidak terdefinisi</string>
    <string name="dose_unit">Satuan Dosis</string>
    <string name="dose_amount">Banyak Dosis</string>
    <string name="dose_amount_label_format">%1$s%2$s per dosis</string>
    <string name="sample_dose_amount_label">5mg per dosis</string>
    <string name="remaining_doses">Sisa Dosis</string>
    <string name="sample_remaining_doses_label">10 dosis tersisa</string>
    <string name="remaining_doses_label_format">%1$d dosis tersisa</string>
    <string name="no_remaining_doses_message">Tidak ada dosis yang tersisa\nJika ini salah, perbarui dosis yang tersisa dengan mengubah obatnya</string>
    <string name="take_with_food">Ambil dengan makanan</string>
    <string name="no_image_available">Tidak ada gambar tersedia</string>
    <string name="view_the_project_on_github">Lihat di GitHub</string>
    <string name="github_link" translatable="false">https://github.com/fiqriturhamz/MedicationReminder/tree/master</string>
    <string name="app_description">Proyek aplikasi ini digunakan untuk memenuhi tugas akhir capstone yang ada di Studi Independen Dicoding dengan learning path Pengembang Aplikasi Android.\n\nAplikasi android ini muncul dari pemikiran kami yang kadang kelupaan saat jadwalnya minum obat sehingga membuat obat menjadi tidak efektif dan bahkan bisa memperburuk kesehatan karena lupa. Maka dari itu harapan kami dengan adanya aplikasi ini bisa membantu orang banyak yang mengonsumsi obat-obatan supaya tidak lupa terhadap jadwal minum obat.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_time">pilih waktu</string>
    <string name="time_picker_tag" translatable="false">time_picker</string>
    <string name="select_a_start_date">mulai tanggal</string>
    <string name="time_between_doses">Waktu antar dosis:</string>
    <string name="days">Hari</string>
    <string name="weeks">Minggu</string>
    <string name="months">Bulan</string>
    <string name="years">Tahun</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="confirm">Konfirmasi</string>

    <string name="pick_a_time">Pilih waktu sebelum menyimpan</string>
    <string name="fill_fields">Isi nama sebelum menyimpan</string>
    <string name="med_saved">Obat berhasil tersimpan</string>
    <string name="cancelled">Obat baru dibatalkan</string>
    <string name="time_24">H:mm</string>
    <string name="time_12">h:mma</string>
    <string name="med_position_key" translatable="false">medication_position</string>
    <string name="today">Hari ini</string>
    <string name="yesterday">Kemarin</string>
    <string name="tomorrow">Besok</string>
    <string name="closest_dose_label">Dosis terdekat: %1$s</string>
    <string name="already_took_dose">Anda telah meminum dosis ini</string>
    <string name="date_format">MMM d, yyyy</string>
    <string name="time_taken">Waktu telah diminum: %1$s</string>
    <string name="delete">hapus</string>
    <string name="are_you_sure">Apa Anda yakin?</string>
    <string name="medication_delete_warning">Obat akan dihapus permanen</string>
    <string name="took_this_already">Anda telah meminumnya</string>
    <string name="edit">Ubah</string>
    <string name="edit_cancelled">Perubahan dibatalkan</string>
    <string name="channel_name" translatable="false">Medication Reminder</string>
    <string name="channel_description">Notifikasi pengingat</string>
    <string name="med_id_key" translatable="false">med_id</string>
    <string name="time_for_your_dose">Waktu untuk dosis Anda</string>
    <string name="sorry">Maaf!</string>
    <string name="okay">Oke</string>
    <string name="last_version_used_key" translatable="false">last_version_used</string>
    <string name="schedule_picker_tag" translatable="false">schedule_picker</string>
    <string name="date_picker_tag" translatable="false">date_picker</string>
    <string name="schedule_format">%1$s\nMulai %2$s\nDiulangi setiap\n%3$d hari, %4$d minggu,\n%5$d bulan, %6$d tahun</string>
    <string name="utc" translatable="false">UTC</string>
    <string name="fill_out_all_schedules">Isi semua jadwal sebelum mengkonfirmasi</string>
    <string name="fill_out_schedule">Isi jadwal sebelum mengkonfirmasi</string>
    <string name="next_dose_label">Dosis selanjutnya: %1$s</string>
    <string name="taken">Telah diminum</string>
    <string name="not_taken">Belum diminum</string>
    <string name="sort">Sortir</string>
    <string name="sort_key" translatable="false">Sort</string>
    <string name="restore_database">Pulihkan database</string>
    <string name="back_up_database">Cadangkan database</string>
    <string name="database_is_invalid">Database invalid</string>
    <string name="database_restored">Database dipulihkan</string>
    <string name="took_it">Ambil</string>
    <string name="app_name_short">MedicationReminder</string>
    <string name="remind_in_15">Ingatkan dalam 15 menit</string>
    <string name="image_path" translatable="false">images</string>
    <string name="file_provider" translatable="false">com.example.medicationreminder.fileprovider</string>
    <string name="dose_and_proof_saved">Dosis dan bukti tersimpan</string>
    <string name="failed_to_get_proof">Gagal mendapatkan bukti</string>
    <string name="dose_time_key" translatable="false">dose_time</string>
    <string name="temp_dir" translatable="false">tmp</string>
    <string name="time_taken_key" translatable="false">time_taken</string>
    <string name="take_med_key" translatable="false">take_med</string>
    <string name="back_up_successful">Pencadangan sukses</string>
    <string name="back_up_failed">Pencadangan gagal</string>
    <string name="inactive">Tidak aktif</string>
    <string name="undefined">Tidak terdefinisi</string>
    <string name="type_label_format">Tipe: %1$s</string>
    <string name="muhammad_fiqri_turham">Muhammad Fiqri Turham</string>
    <string name="ilyam_faisal">Ilyam Faisal</string>
    <string name="explanation">Medication Reminder ini dibuat oleh:</string>


</resources>