<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedDetailActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:titleTextColor="@color/white"
        app:navigationIconTint="@color/white"
        android:layout_height="?android:actionBarSize"
        android:gravity="center_vertical" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/outer_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fadeScrollbars="false">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                app:autoSizeTextType="uniform"
                android:textSize="32sp"
                android:paddingTop="15dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="5dp"
                android:text="@string/sample_medicine"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:text="@string/midnight"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/closest_dose_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:text="@string/closest_dose_sample"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time_since_dose_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:gravity="center_horizontal"
                android:text="@string/time_since_dose_sample"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/just_took_it_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="20dp"
                android:padding="15dp"
                android:textSize="18sp"
                android:text="@string/i_just_took_it"
                android:textColor="@color/green"
                app:strokeColor="@color/sub_green"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/active_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medication_active"
                android:textColor="@color/green"
                app:autoSizeTextType="uniform"
                android:textSize="23sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:checked="true"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notification_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_enabled"
                android:textColor="@color/green"
                app:autoSizeTextType="uniform"
                android:textSize="23sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:checked="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rx_number_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="5dp"
                android:text="@string/sample_prescription_number_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:text="@string/sample_type_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/take_with_food_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:text="@string/take_with_food"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dose_amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:text="@string/sample_dose_amount_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remaining_doses_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:text="@string/sample_remaining_doses_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pharmacy_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:text="@string/sample_pharmacy_label"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:text="@string/sample_description"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/previous_doses_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                app:autoSizeTextType="uniform"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingHorizontal="20dp"
                android:text="@string/previous_doses"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/delete_hint_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                app:autoSizeTextType="uniform"
                android:textSize="14sp"
                android:paddingHorizontal="20dp"
                android:text="@string/record_delete_hint"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_hint_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                app:autoSizeTextType="uniform"
                android:textSize="14sp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                android:text="@string/record_detail_hint"/>

            <ListView
                android:id="@+id/previous_doses_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="5dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>