<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/item_background"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        autoSizeTextType="uniform"
        android:textSize="25sp"
        android:text="@string/sample_medicine"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        autoSizeTextType="uniform"
        android:textSize="16sp"
        android:text="@string/sample_type_label"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_label"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            autoSizeTextType="uniform"
            android:textSize="18sp"
            android:text="@string/midnight"
            android:gravity="left"
            android:layout_gravity="left"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_weight="1"
            android:id="@+id/taken_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            autoSizeTextType="uniform"
            android:textSize="18sp"
            android:text="@string/not_taken"
            android:gravity="right"
            android:layout_gravity="right"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>